# sunshape

./: .gitignore  README.md  __init__.py  cache.py  cli.py  codec.py  diagnose.py  dsq.py  eval.py  hf.py  metrics.py  pyproject.toml  server.py  stats.py  triton_kernels.py  turbo_baseline.py  vllm_attn_backend.py
examples/: README.md  hf_quickstart.py  serve_quickstart.py  vllm_export.py
final/qwen08b_niah_gate_3bit_20260407/: niah_driver.log.jsonl
final/qwen08b_niah_gate_4bit_20260407/: niah_driver.log.jsonl
integration/: __init__.py  vllm.py
sunshape/: __init__.py  cache.py  cli.py  codec.py  diagnose.py  dsq.py  eval.py  hf.py  methods.py  server.py  stats.py  triton_kernels.py  turbo_baseline.py  turbo_cache.py  vllm_attn_backend.py
sunshape/integration/: vllm.py
