[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sunshape"
version = "0.1.0"
description = "SunShape library and CLI for KV-cache compression, evaluation, and serving."
requires-python = ">=3.12,<3.13"
dependencies = [
  # Exact pins are intentional for reproducibility of the paper/eval harness.
  "torch==2.11.0",
  "datasets>=4.2.0",
  "transformers==5.5.0",
  "accelerate>=1.10.1",
  "sentencepiece>=0.2.1",
  "pandas>=2.3.0",
  "numpy>=2.3.0",
  "tabulate>=0.9.0",
]

[project.scripts]
sunshape = "sunshape.cli:main"

[tool.setuptools.packages.find]
include = ["sunshape*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
  "pytest>=9.0.2",
]
